<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.deguet.persist.DemoActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/fichiers" />

        <Button
            android:id="@+id/ajout_fichiers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/vider_fichiers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flush" />
    </LinearLayout>

    <ListView
        android:background="#afa"
        android:id="@+id/lvfichiers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sql" />

        <Button
            android:id="@+id/ajout_sql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/vider_sql"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flush" />
    </LinearLayout>

    <ListView
        android:background="#aaf"
        android:id="@+id/lvsql"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prefs" />

        <Button
            android:id="@+id/ajout_prefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/vider_prefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flush" />
    </LinearLayout>

    <ListView
        android:background="#faa"
        android:id="@+id/lvprefs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>


</LinearLayout>
